[ADD] Generación y validación para matrículas de maestros